[package]
name = "dotfiles-for-zach"
version = "0.1.0"
authors = ["Zach <zach.c.barnes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
dialoguer = "0.9.0"
indicatif = "0.16.2"
console = "0.15.0"